plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'dbinc'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'com.google.api-client:google-api-client:2.8.1'

	runtimeOnly 'org.postgresql:postgresql'
	runtimeOnly 'com.oracle.database.jdbc:ojdbc11:23.5.0.24.07'
	runtimeOnly 'com.oracle.database.nls:orai18n:23.5.0.24.07'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	implementation 'org.jsoup:jsoup:1.17.2'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testRuntimeOnly 'com.h2database:h2'
}

tasks.named('test') {
	useJUnitPlatform()
}

processResources {
	exclude 'application*.yml'
	exclude 'application*.yaml'
}

tasks.withType(JavaCompile) {
	options.compilerArgs += ['-parameters']
}

bootRun {
	systemProperty 'spring.profiles.active', System.getProperty('spring.profiles.active', 'dev')
	systemProperty 'file.encoding', 'UTF-8'
	jvmArgs '-Dfile.encoding=UTF-8', '-Duser.language=ko', '-Duser.country=KR'
}

bootJar {
	enabled = true
	exclude 'application.yml'
	exclude 'application-*.yml'
}
